kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-client
  namespace: portfolio
  labels:
    app: portfolio-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio-client
  template:
    metadata:
      labels:
        app: portfolio-client
    spec:
      containers:
        - name: portfolio-client-container
          image: gcr.io/warrenburg-portfolio/portfolio-client:latest
          resources:
            limits:
              cpu: 250m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 512Mi
          readinessProbe:
            failureThreshold: 3
            httpGet:
              port: 80
              path: /
          livenessProbe:
            periodSeconds: 300
            httpGet:
              port: 80
              path: /
          ports:
            - containerPort: 80
            - containerPort: 443
