kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-client-service
  namespace: portfolio
  labels:
    app: portfolio-client
spec:
  type: NodePort
  selector:
    app: portfolio-client
  ports:
    - port: 80
      targetPort: 80
